fix: tweak spacing and format

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -243,11 +243,15 @@ code {
 
 kbd {
     font-family: monospace;
-    font-size: 12px;
-    border: var(--lineWeight) solid var(--colPri);
+    font-size: 0.625rem;
+    border: 1px solid var(--colPri);
     padding: 0.1rem 0.25rem;
     border-radius: 0;
-    box-shadow: 0 0.25rem;
+    box-shadow: 0 2px;
+}
+
+p {
+    line-height: 1.25;
 }
 
 dialog {
